--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <body>
     <div>
-        <img src="Image-1.jpg" class="Images" id="Images"/>
+        <img src="image 1.jpg" class="Images" id="Images"/>
     </div>
 
     <div class="img-container">
-        <img src="./Image-1.jpg" class="Product-Img" onclick="changeImage(0)" />
-        <img src="./Image-2.jpg" class="Product-Img" onclick="changeImage(1)" />
-        <img src="./Image-3.jpg" class="Product-Img" onclick="changeImage(2)" />
-        <img src="./Image-4.jpg" class="Product-Img" onclick="changeImage(3)" />
-        <img src="./Image-5.jpg" class="Product-Img" onclick="changeImage(4)" />
+        <img src="./image 1.jpg" class="Product-Img" onclick="changeImage(0)" />
+        <img src="./image 2.jpg" class="Product-Img" onclick="changeImage(1)" />
+        <img src="./image 3.jpg" class="Product-Img" onclick="changeImage(2)" />
+        <img src="./image 4.jpg" class="Product-Img" onclick="changeImage(3)" />
+        <img src="./image 5.jpg" class="Product-Img" onclick="changeImage(4)" />
 
     </div>
 
